additive noise opG opH -> opT opH

--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -311,16 +311,19 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:dual_addnoise}.
 \end{proof}
 
 %=======================================
-\section{Effects of additive noise and filtering}
+\section{Effects of additive noise and operators}
 %=======================================
 \begin{figure}[h]
   \centering
-  \begin{tabular}{|c|c|c|}
+  \begin{tabular}{|l|l|l|}
     \hline
       \includegraphics{graphics/sysT_xyvq.pdf}
      &\includegraphics{graphics/sysT_xyup.pdf}
      &\includegraphics{graphics/sysT_mnoise.pdf}
-    \\\xref{thm:sysT_addnoise_v} &\xref{thm:sysT_addnoise_u} &\xref{thm:sysT_mnoise}
+    \\
+        (A) \xref{thm:sysT_addnoise_v}
+      & (B) \xref{thm:sysT_addnoise_u}
+      & (C) \xref{thm:sysT_mnoise}
     \\\hline
   \end{tabular}
   \caption{\label{fig:sysT_addnoise}Additive noise with transform $\opT$}
@@ -330,10 +333,10 @@ has \emph{no effect} on cross-correlation across the transform (next theorem).
 However, adding \emph{before} $\opT$ \emph{does} \prefpp{thm:sysT_addnoise_u}.
 %---------------------------------------
 \begin{theorem}
-Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise}.
 \label{thm:sysH_addnoise}
 \label{thm:sysT_addnoise_v}
 %---------------------------------------
+Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (A).
 \thmbox{
   \brb{\begin{array}{FrclDD}
       (A).& \Rxx(n_1,m)             &=& \Rxx(n_2,m)          &(\prope{WSS})          & and
@@ -397,12 +400,12 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise}.
 \label{thm:sysT_addnoise_u}
 %\includegraphics{graphics/sysH_xyuvpq.pdf}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise}.
+Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (B).
 \thmbox{
-  \brb{\begin{array}{FrclDD}
-      (A).& \Rxx(n_1,m)             &=& \Rxx(n_2,m)         &(\prope{WSS})          & and
-    \\(B).& \pE\brs{\rvx(n)\rvu(n)} &=&\pE\rvx(n)\pE\rvu(n) &(\prope{uncorrelated}) & and
-    \\(C).& \pE\rvu(n)              &=& 0                   & (\prope{zero-mean})   &
+  \brb{\begin{array}{FMMD}
+      (A).& $\rvx(n)$               is  & (\prope{WSS})          & and
+    \\(B).& $\rvx(n)$ and $\rvu(n)$ are & (\prope{uncorrelated}) & and
+    \\(C).& $\rvu(n)$               is  & (\prope{zero-mean})    &
   \end{array}}
   \implies
   \brb{\begin{array}{Frcl@{\hspace{2pt}}c@{\hspace{2pt}}lD}
@@ -436,10 +439,10 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise}.
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (C).
 \thmbox{
-  \brb{\begin{array}{FrclDD}
-      (A).& \Rxx(n_1,m)             &=& \Rxx(n_2,m)         &(\prope{WSS})          & and
-    \\(B).& \pE\brs{\rvx(n)\rvu(n)} &=&\pE\rvx(n)\pE\rvu(n) &(\prope{uncorrelated}) & and
-    \\(C).& \pE\rvu(n)              &=& 0                   &(\prope{zero-mean})    &
+  \brb{\begin{array}{FMMD}
+      (A).& $\rvx(n)$               is  & (\prope{WSS})          & and
+    \\(B).& $\rvx(n)$ and $\rvu(n)$ are & (\prope{uncorrelated}) & and
+    \\(C).& $\rvu(n)$               is  & (\prope{zero-mean})    &
   \end{array}}
   \implies
   \brb{\begin{array}{Frcl@{\hspace{2pt}}c@{\hspace{2pt}}lD}
@@ -470,75 +473,6 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (C)
 \end{align*}
 \end{proof}
 
-%%---------------------------------------
-%\begin{corollary}
-%\label{cor:sysH_addnoise_z}
-%%---------------------------------------
-%Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
-%\corbox{
-%  \brb{\begin{array}{M}
-%    hypotheses of\\
-%    \pref{thm:sysH_addnoise}
-%  \end{array}}
-%  \implies
-%  \brb{\begin{array}{Frcl}
-%      (1).& \Szxy(z)&=& \Szxq(z)
-%    \\(2).& \Szuy(z)&=& \Szuq(z)
-%    \\(3).& \Szpy(z)&=& \Szpq(z)
-%    \\(4).& \Szpq(z)&=& \Szxy(z) + \Szuy(z)
-%    \\(5).& \Szpq(z)&=& \Szxy(z) + \Szuq(z)
-%  \end{array}}
-%  }
-%\end{corollary}
-%\begin{proof}
-%\begin{align*}
-%  \Swxy(\omega)
-%    &\eqd \opDTFT\Rxy(m)
-%    && \text{by definition of $\Swxy$}
-%    && \text{\xref{def:Swxy}}
-%  \\&= \opDTFT\Rxq(m)
-%    && \text{by \prefp{thm:sysH_addnoise}}
-%    && \text{(1)}
-%  \\&= \Swxq(\omega)
-%    && \text{by definition of $\Swxy$}
-%    && \text{\xref{def:Swxy}}
-%\end{align*}
-%\end{proof}
-%
-%%---------------------------------------
-%\begin{corollary}
-%\label{cor:sysH_addnoise}
-%%---------------------------------------
-%Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
-%\corbox{
-%  \brb{\begin{array}{M}
-%    hypotheses of\\
-%    \pref{thm:sysH_addnoise}
-%  \end{array}}
-%  \implies
-%  \brb{\begin{array}{Frcl}
-%      (1).& \Swxy(\omega)&=& \Swxq(\omega)
-%    \\(2).& \Swuy(\omega)&=& \Swuq(\omega)
-%    \\(3).& \Swpy(\omega)&=& \Swpq(\omega)
-%    \\(4).& \Swpq(\omega)&=& \Swxy(\omega) + \Swuy(\omega)
-%    \\(5).& \Swpq(\omega)&=& \Swxy(\omega) + \Swuq(\omega)
-%  \end{array}}
-%  }
-%\end{corollary}
-%\begin{proof}
-%\begin{align*}
-%  \Swxy(\omega)
-%    &\eqd \opDTFT\Rxy(m)
-%    && \text{by definition of $\Swxy$}
-%    && \text{\xref{def:Swxy}}
-%  \\&= \opDTFT\Rxq(m)
-%    && \text{by \prefp{thm:sysH_addnoise}}
-%    && \text{(1)}
-%  \\&= \Swxq(\omega)
-%    && \text{by definition of $\Swxy$}
-%    && \text{\xref{def:Swxy}}
-%\end{align*}
-%\end{proof}
 
 \prefpp{cor:ZSxy} demonstrates that if a random input $\rvx(n)$ is processed by an \prope{LTI} system
 $\fh(n)$ with output $\rvy(n)$, then the cross-spectral density and auto-spectral density are 
@@ -605,11 +539,24 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 \end{align*}
 \end{proof}
 
+\begin{figure}[h]
+  \centering%
+  \begin{tabular}{|c|c|}
+     \hline
+     \includegraphics{graphics/opT_opH_cnoise.pdf}%
+    &\includegraphics{graphics/opT_opH_mnoise.pdf}%
+   \\
+     (A) \xref{cor:opT_opH_cnoise}
+    &(B) \xref{cor:opT_opH_mnoise}
+   \\\hline
+  \end{tabular}
+\end{figure}
 %---------------------------------------
 \begin{minipage}{\tw-80mm}
 \begin{corollary}
 \label{cor:GHz}
 \label{cor:GHw}
+\label{cor:opT_opH_cnoise}
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated to the right.
 \end{corollary}
@@ -639,7 +586,7 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     && \text{by \prefp{cor:dual_addnoise}}
     && \text{and (B), (C) and (D)}
   \\&= \ZG(z)\Szpq(z)
-    && \text{by \prefp{cor:xGw_xHy}}
+    && \text{by \prefp{thm:xGw_xHy}}
     && \text{and (A)}
   \\&= \ZG(z)\brs{\Szxy(z) + \Szuy(z)}
     && \text{by \prefp{cor:sysH_addnoise_z}}
@@ -650,7 +597,7 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     && \text{by \prefp{cor:dual_addnoise}}
     && \text{and (B), (C) and (D)}
   \\&= \FG(\omega)\Swpq(\omega)
-    && \text{by \prefp{cor:xGw_xHy}}
+    && \text{by \prefp{thm:xGw_xHy}}
     && \text{and (A)}
   \\&= \FG(\omega)\brs{\Swxy(\omega) + \Swuy(\omega)}
     && \text{by \prefp{cor:sysH_addnoise}}
