--- a/common/randseq_dsp.tex
+++ b/common/randseq_dsp.tex
@@ -374,6 +374,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
 \begin{minipage}{\tw-70mm}
 \begin{theorem}
 \label{thm:xGw_xHy}
+\label{cor:xGw_xHy}
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated to the right.
 \end{theorem}
@@ -383,14 +384,15 @@ Let $\opS$ be the \structe{system} illustrated to the right.
 \thmbox{
   \brb{\begin{array}{FMMD}
       (A).& $\opH$    is &\prope{LTI}       & and
-    \\(B).& $\rvx(n)$ is &\prope{WSS}       & 
-    \\(C).& $\opH=\sum$
+    \\(B).& $\rvx(n)$ is &\prope{WSS}       & and
+    \\(C).& $\opH\kdelta(n)=\sum_{m\in\Z}\fh(m)\kdelta(n-m)$
+    \\    & \mc{2}{D}{(\fncte{impulse response})}
   \end{array}}
   \implies
-  \brb{\begin{array}{rc>{\ds}lDD}
-    \Rwy(m) &=&    \sum_{n\in\Z}\fh(n)\Rxy(m-n) 
-          \\&\eqd& \fh(m)\convd\Rxy(m)
-            && (\ope{convolution})
+  \brb{\begin{array}{Frc>{\ds}l c>{\ds}lD}
+      (1).&\Rwy(m)       &=& \sum_{n\in\Z}\fh(n)\Rxy(m-n) &\eqd& \fh(m)\convd\Rxy(m) & and
+    \\(2).&\Szwy(z)      &=& \ZH(z)     \Szxy(z)          &    &                     & and
+    \\(3).&\Swwy(\omega) &=& \FH(\omega)\Swxy(\omega)     &    &                     &
   \end{array}}
   }
 \\
@@ -412,56 +414,18 @@ Let $\opS$ be the \structe{system} illustrated to the right.
   \\&= \brs{\fh(m)\convd\Rxy(m)}
     && \text{by definition of \ope{convolution}}
     && \text{\xref{def:dsp_conv}}
-  %\\
-  %\Rwy(m)
-  %  &\eqd \pE\brs{\rvw(m)\rvy^\ast(0)}
-  %  && \text{by definition of $\Rwy$}
-  %  && \text{\xref{def:Rxym}}
-  %\\&= \pE\brs{\sum_{n\in\Z}\fg(n)\rvx(m-n)\rvy^\ast(0)}
-  %  && \text{by \prope{LTI} hypothesis}
-  %  && \text{(A)}
-  %\\&= \sum_{n\in\Z}\fg(n)\pE\brs{\rvx(m-n)\rvy^\ast(0)}
-  %  && \text{by \prope{linearity}}
-  %  && \text{\xref{cor:pE_linop}}
-  %\\&= \sum_{n\in\Z}\fg(n)\Rxy(m-n)
-  %  && \text{by definition of $\Rxy$}
-  %  && \text{\xref{def:Rxym}}
-  %\\&= \brs{\fg(m)\convd\Rxy(m)}
-  %  && \text{by definition of \ope{convolution}}
-  %  && \text{\xref{def:dsp_conv}}
-\end{align*}
-\end{proof}
-
-%---------------------------------------
-\begin{corollary}
-\label{cor:xGw_xHy}
-%---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:xGw_xHy}.
-\corbox{
-  \brb{\begin{array}{M}
-    hypotheses of \prefpp{thm:xGw_xHy}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{Frc>{\ds}lD}
-      (1).&\Szwy(z)      &=& \FG(z)     \Szxy(z)
-    \\(2).&\Swwy(\omega) &=& \FG(\omega)\Swxy(\omega)
-  \end{array}}
-  }
-\end{corollary}
-\begin{proof}
-\begin{align*}
+  \\
   \Swwy(m)
     &\eqd \opDTFT\Rwy(m)
     && \text{by definition of $\Swwy$}
     && \text{\xref{def:Swxy}}
-  \\&= \brs{\fg(m)\convd\Rxy(m)}
+  \\&= \brs{\fh(m)\convd\Rxy(m)}
     && \text{by \prefp{thm:xGw_xHy}}
-  \\&= \FG(\omega)\Swxy(\omega)
+  \\&= \FH(\omega)\Swxy(\omega)
     && \text{by \thme{Convolution Theorem}}
     && \text{\xref{thm:conv}}
 \end{align*}
 \end{proof}
-
 
 %=======================================
 \section{Whitening}
