additive noise on input with LTI operator

--- a/common/math/graphics/system/opT_opH_mnoise.tex
+++ b/common/math/graphics/system/opT_opH_mnoise.tex
@@ -50,7 +50,6 @@
   \nnode{-2.00}{0.75}{sysPp}%
   \nnode{-1.25}{0.75}{sysPg}%
   \pnode(-1.25,-0.75){sysPh}%
-  \nnode{-1.25}{0.00}{sysPx}%
     %     |     |     |_________________ node name
     %     |     |_______________________ y location
     %     |_____________________________ x location
@@ -72,9 +71,9 @@
   %          sysPp  sysPg      |     | sysQ  v 
   %    sysP ----o-----o------->|  T  |----->(+)------> sysY 
   %             |     |        |_____|     addV
-  %             |     |                  
-  %    sysU ---(+)----o sysPx   __|__(0,0)
-  %        addU |U    |           |        sysW
+  %             v     |                  
+  %    sysU -->(+)    |         __|__(0,0)
+  %         addU|     |           |        sysW
   %             |     |         _____        |
   %           sysX    |        |     | sysR  v 
   %                   o------->|  H  |----->(+)------> sysS 
@@ -83,7 +82,6 @@
   \ncline{->}{sysP}{sysT}%
   \ncline{->}{sysPp}{addU}%
   \ncline{->}{sysU}{addU}%
-  \ncline{addU}{sysPx}%
   \ncline{sysPg}{sysPh}%
   \ncline{->}{addU}{sysX}%
   \ncline{->}{sysPh}{sysH}%
