--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -769,8 +769,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise}.
     \mc{3}{M}{\scs\prope{biased}:}
                              & \text{\scs\prope{over-estimated}}
                            & & \text{\scs\prope{under-estimated}}
-    \\(1).&\estH_1(\omega) &=& \FH(\omega)\brs{1 + \frac{\ds\Swuu(\omega)}
-                                                        {\ds\Swxx(\omega)}}
+    \\(1).&\estH_1(\omega) &=& \FH(\omega)
                            &=& \FH(\omega)\brs{\text{$\frac{1}{1+\frac{\ds\Swww(\omega)}{\ds\Swpp(\omega)}}$}}
                            &and
     \\(2).&\estH_2(\omega) &=& \FH(\omega)\brs{1 + \frac{\Swvv(\omega)}{\Swqq(\omega)}}
@@ -785,16 +784,21 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise}.
     &\eqd \frac{\Swyx(\omega)}{\Swxx(\omega)}
     && \text{by definition of $\estH_1$}
     && \text{\xref{def:H1}}
-  \\&= \frac{\Swqp(\omega)}{\Swxx(\omega)}
-    && \text{by hypotheses (B)--(C)}
-    && \text{and \prefp{cor:sysH_addnoise}}
-  \\&= \frac{\Swpp(\omega)\FH(\omega)}{\Swxx(\omega)}
-    && \text{by hypothesis (A)}
-    && \text{and \prefp{cor:Swxy}}
-  \\&= \FH(\omega)\brs{\frac{\Swxx(\omega)+\Swuu(\omega)}{\Swxx(\omega)}}
-    && \text{by hypotheses (B)--(C)}
-    && \text{and \prefp{cor:xvy}}
-  \\&= \FH(\omega)\brs{1 + \frac{\Swuu(\omega)}{\Swxx(\omega)}}
+  \\&= \frac{\FH(\omega)\Swxx(\omega)}{\Swxx(\omega)}
+    && \text{by \prefp{thm:sysH_addnoise_lti}}
+  \\&= \FH(\omega)
+  \\
+  \estH_2(\omega)
+    &\eqd \frac{\Swyy(\omega)}{\Swxy(\omega)}
+    && \text{by definition of $\estH_2$}
+    && \text{\xref{def:H2}}
+  \\&= \frac{\Swyy(\omega)}{\FH(\omega)\Swxx(\omega)}
+    && \text{by \prefp{thm:sysH_addnoise_lti}}
+  \\&= \frac{\FH(\omega)\FH^\ast(\omega)}{\FH(\omega)}
+  \\&= \FH(\omega)
+  \\
+  \\
+  \\
   \\
   \estH_1(\omega)
     &\eqd \frac{\Swyx(\omega)}{\Swxx(\omega)}
